--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://wwwakashgupta45:mern123@cluster0.vbfnb95.mongodb.net/
-PORT=6000
+MONGO_URI=mongodb+srv://wwwakashgupta45:mern1234@cluster0.vbfnb95.mongodb.net/SmartShop
+PORT=3001
+JWT_SECRET=akash1234
