--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://wwwakashgupta45:mern1234@cluster0.vbfnb95.mongodb.net/SmartShop
+MONGO_URI=mongodb+srv://wwwakashgupta45:mern1234@cluster0.vbfnb95.mongodb.net/secure_access
 PORT=3001
 JWT_SECRET=akash1234
